--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -11,7 +11,7 @@ ifndef::backend-pdf[]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
 // Monitoring
-** xref:prometheus.adoc[Prometheus]
+** xref:monitoring.adoc[Monitoring]
 // Containers
 ** xref:kubernetes.adoc[Kubernetes]
 // Public Cloud
@@ -75,7 +75,7 @@ include::modules/administration/pages/live-patching-sles15.adoc[leveloffset=+2]
 include::modules/administration/pages/live-patching-sles12.adoc[leveloffset=+2]
 
 // Monitoring
-include::modules/administration/pages/prometheus.adoc[leveloffset=+1]
+include::modules/administration/pages/monitoring.adoc[leveloffset=+1]
 
 // Containers
 include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
