down-case dockerfile, remove markup

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -32,7 +32,7 @@ image::image-building.png[scaledwidth=80%]
 The containers feature is available for Salt minions running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
-* An existing external GitHub or internal GitLab repository containing a `Dockerfile` and configuration scripts (example scripts are provided in this chapter).
+* An existing external GitHub or internal GitLab repository containing a dockerfile and configuration scripts (example scripts are provided in this chapter).
 * A properly configured image registry.
 +
 
@@ -159,7 +159,7 @@ Only lowercase characters are permitted in container labels.
 If your container image tag is in a format such as `myproject/myimage`, make sure your image store registry URI contains the `/myproject` suffix.
 ====
 
-. Use a `Dockerfile` as the `Image Type`.
+. Use a dockerfile as the `Image Type`.
 
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 
@@ -213,7 +213,7 @@ https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.g
 .Specifying a Github or Gitlab Branch
 ====
 If a branch is not specified, the `master` branch will be used by default.
-If a `folder` is not specified the image sources (`Dockerfile` sources) are expected to be in the root directory of the Github or Gitlab checkout.
+If a `folder` is not specified the image sources (dockerfile sources) are expected to be in the root directory of the Github or Gitlab checkout.
 ====
 
 . Select an `Activation Key`.
@@ -234,12 +234,12 @@ When you associate an activation key with an image profile you are ensuring any 
 === Example Dockerfile and add_packages Script
 
 
-This section contains an example `Dockerfile`.
-You specify a `Dockerfile` that will be used during image building when creating an image profile.
-A `Dockerfile` and any associated scripts should be stored within an external or internal Github or Gitlab repository.
+This section contains an example dockerfile.
+You specify a dockerfile that will be used during image building when creating an image profile.
+A dockerfile and any associated scripts should be stored within an external or internal Github or Gitlab repository.
 
-The `Dockerfile` provides access to a specific repository version served by {productname}.
-The following example `Dockerfile` is used by {productname} to trigger a build job on a build host.
+The dockerfile provides access to a specific repository version served by {productname}.
+The following example dockerfile is used by {productname} to trigger a build job on a build host.
 The [option]``ARG`` parameters ensure that the built image is associated with the desired repository version served by {productname}.
 The [option]``ARG`` parameters also allow you to build image versions of {sls} which may differ from the version of {sls} used by the build host itself.
 
@@ -277,7 +277,7 @@ RUN /root/add_packages.sh
 RUN rm -f /etc/zypp/repos.d/susemanager:dockerbuild.repo
 ----
 
-This is an example [path]``add_packages.sh`` script for use with your `Dockerfile`:
+This is an example [path]``add_packages.sh`` script for use with your dockerfile:
 
 ----
 #!/bin/bash
