--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -45,7 +45,7 @@ _Kubernetes_ clusters are registered with SUSE Manager as ``virtual host manager
 Registration and authorization begins with importing a `kubeconfig` file using Kubernetes official command line tool ``kubectl``.
 
 .Procedure: Registering a Kubernetes Cluster with {productname}
-. Select menu:Systems[Virtual Host Managers] from the main navigation menu of the {webui}.
+. In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
 . In the [guimenu]``Create`` menu, select [guimenu]``Kubernetes Cluster``.
 . Enter a label for the new virtual host manager.
 . Select the `kubeconfig` file that contains the required data for the Kubernetes cluster.
