avoid deep nesting
per feedback.

--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -74,17 +74,17 @@ See the following steps to find runtime data for images.
 
 . In the {productname} {webui}, navigate to menu:Images[Image List].
 . In the image list table, the runtime columns are labeled ``Revision``, ``Runtime``, and ``Instances``.
-Initially, these columns do not provide useful data.
+In these columns find the following information:
 
-** ``Revision``: An artificial sequence number that increments on every rebuild for manager-built images or on every re-import for externally built images.
-** ``Runtime``: Overall status of the running instances of the image throughout the registered clusters.
+* ``Revision``: An artificial sequence number that increments on every rebuild for manager-built images or on every re-import for externally built images.
+* ``Runtime``: Overall status of the running instances of the image throughout the registered clusters.
 The status can be one of the following:
-*** _All instances are consistent with SUSE Manager_: All the running instances are running the same build of the image as tracked by {productname}.
-*** _Outdated instances found_: Some of the instances are running an older build of the image.
+** _All instances are consistent with SUSE Manager_: All the running instances are running the same build of the image as tracked by {productname}.
+** _Outdated instances found_: Some of the instances are running an older build of the image.
 A redeploy of the image into the pod may be required.
-*** _No information_: The checksum of the instance image does not match the image data contained in {productname}.
+** _No information_: The checksum of the instance image does not match the image data contained in {productname}.
 A redeploy of the image into the pod may be required.
-** ``Instances``: Number of instances running this image across all the clusters registered in {productname}.
+* ``Instances``: Number of instances running this image across all the clusters registered in {productname}.
 A breakdown of numbers can be seen by clicking the pop-up icon next to the number.
 
 
