--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -141,7 +141,7 @@ Status icons are explained in the next section.
 == Rebuild a Previously Deployed Image in Kubernetes
 
 
-The following steps will guide you through rebuilding an image that has been deployed to a Kubernetes cluster.
+These steps will guide you through rebuilding an image that has been deployed to a Kubernetes cluster.
 
 . Go to menu:Images[Image List].
 . Click the `Details` button on the right end of a row that has running instances.
