--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -112,8 +112,9 @@ The following steps will guide you through importing a previously deployed image
 
 . Select an image that has already been deployed to any of your registered Kubernetes clusters.
 . Add the registry owning the image to SUSE Manager as an image store.
-. Select menu:Images[Images] , click `Import` from the top-right corner, fill in the form fields and click ``Import``.
-. Notice the updated data in the `Runtime` and `Instances` columns in the respective image row.
+. Navigate to menu:Images[Image List], click `Import` from the top-right corner, fill in the form fields and click ``Import``.
+
+In the `Runtime` and `Instances` columns in the respective image row you can now see the updated data.
 
 
 
@@ -123,9 +124,8 @@ The following steps will guide you through importing a previously deployed image
 
 The following steps will help you find additional runtime data.
 
-. Select menu:Images[Image List].
-. Click the `Details` button on the right end of a row that has running instances.
-. Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields under the `Image Info` section.
+. Navigate to menu:Images[Image List], locate the row that contains the running instance, and click btn:[Details] on the right end.
+Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields under the `Image Info` section.
 . Select the `Runtime` tab.
 . In the `Runtime` tab is a breakdown of the Kubernetes pods running this image in all the registered clusters including the following data:
 +
@@ -133,7 +133,7 @@ The following steps will help you find additional runtime data.
 ** Pod name
 ** Namespace which the pod resides in
 ** The runtime status of the container in the specific pod.
-Status icons are explained in the next section.
+For more about status icons, see the next section.
 
 
 
@@ -144,7 +144,7 @@ Status icons are explained in the next section.
 The following steps will guide you through rebuilding an image that has been deployed to a Kubernetes cluster.
 
 . Go to menu:Images[Image List].
-. Click the `Details` button on the right end of a row that has running instances.
+Click the `Details` button on the right end of a row that has running instances.
 The image must be manager-built.
 . Click the `Rebuild` button located under the `Build Status` section and wait for the build to finish.
 . Notice the change in the `Runtime` icon and title, reflecting the fact that now the instances are running a previous build of the image.
