salt clients now, no longer minions

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -13,7 +13,7 @@ While {productname} provides all required channels, you might find it useful to 
 [NOTE]
 ====
 When you subscribe to a vendor channel with a traditional client, the product package will automatically be installed.
-On Salt minions, the packages will be added to the package state, and you will need to apply the highstate to push the changes to your systems.
+On Salt clients, the packages will be added to the package state, and you will need to apply the highstate to push the changes to your systems.
 ====
 
 This section gives more detail on how to create, administer, and delete custom channels.
