--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -29,7 +29,7 @@ image::image-building.png[scaledwidth=80%]
 === Requirements
 
 
-The containers feature is available for Salt minions running {sls} 12 or later.
+The containers feature is available for Salt clients running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
 * An existing external GitHub or internal GitLab repository containing a Dockerfile and configuration scripts (example scripts are provided in this chapter).
@@ -56,7 +56,7 @@ For more information on Containers or CaaS Platform, see:
 
 
 To build images with {productname}, you will need to create and configure a build host.
-Container build hosts are Salt minions running {sle} 12 or later.
+Container build hosts are Salt clients running {sle} 12 or later.
 This section guides you though the initial configuration for a build host.
 
 From the {productname} {webui} perform these steps to configure a build host.
@@ -388,7 +388,7 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 === Requirements
 
 
-The Kiwi image building feature is available for Salt minions running {sls}{nbsp}12.
+The Kiwi image building feature is available for Salt clients running {sls}{nbsp}12.
 It is currently not supported to build {sle} 15 images.
 // When building {sle} 15 images will become supported you will need a {sle} 15 based build host.
 
@@ -416,7 +416,7 @@ For more information, see the documentation of the underlying system.
 
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS image build hosts are Salt minions running {sls}{nbsp}12 (SP3 or later).
+OS image build hosts are Salt clients running {sls}{nbsp}12 (SP3 or later).
 This procedure will guide you though the initial configuration for a build host.
 
 From the {productname} {webui} perform these steps to configure a build host:
