--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -6,8 +6,8 @@ On {slsa}{nbsp}15 systems and newer, live patching is managed by the [systemitem
 Before you begin, ensure:
 
 * {productname} is fully updated
-* You have one or more Salt minions running {slsa}{nbsp}15 (SP1 or later)
-* Your {slsa}{nbsp}15 Salt minions are registered with {productname}
+* You have one or more Salt clients running {slsa}{nbsp}15 (SP1 or later)
+* Your {slsa}{nbsp}15 Salt clients are registered with {productname}
 * You have access to the {slsa}{nbsp}15 channels appropriate for your architecture, including the Live Patching child channel (or channels)
 * The minions are fully synchronized
 
