--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -1,6 +1,6 @@
-// 2019-07-24, ke: Is it supported on Salt minions only?
+// 2019-07-24, ke: Is it supported on Salt clients only?
 // This seems to indicate it: "Installing and configuring exporters is done using a Salt formula."
-// If yes, we'd better replace "mananged clients" with the term "Salt minions".
+// If yes, we'd better replace "mananged clients" with the term "Salt clients".
 
 [[prometheus]]
 = Monitoring with Prometheus
