--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -97,4 +97,4 @@ You can do this through the {productname} {webui}, or from the command line on t
 ----
 salt <ubuntu-minion> state.apply channels
 ----
-. OPTIONAL: For salt minions, you might prefer to use  a state to manage your GPG keys.
+. OPTIONAL: For Salt clients, you might prefer to use  a state to manage your GPG keys.
