--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -85,7 +85,7 @@ service osad restart
 
 
 [[bp.expanded-support.centos_salt]]
-== Registering CentOS Salt Minions with {productname}
+== Registering CentOS Salt Clients with {productname}
 
 
 The following procedure will guide you through registering a CentOS Minion.
@@ -119,7 +119,7 @@ rpm --import http://download.opensuse.org/repositories/systemsmanagement:/saltst
 ----
 yum list --showduplicates salt
 ----
-. Install the Salt minion:
+. Install the Salt client:
 +
 
 ----
