--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -5,7 +5,7 @@
 
 
 
-The following sections provide guidance on managing Red Hat Expanded Support clients, this includes Salt minions and traditional systems.
+The following sections provide guidance on managing Red Hat Expanded Support clients, this includes Salt clients and traditional systems.
 
 [[bp.expanded-support.resclients.server]]
 == Server Configuration for {rhel} Channels
@@ -112,7 +112,7 @@ To troubleshoot this error, look at the HTTP protocol to determine if [command]`
 
 
 
-== Registering RES Salt Minions with {productname}
+== Registering RES Salt Clients with {productname}
 
 This section will guide you through registering RHEL minions with {productname}.
 
@@ -170,10 +170,10 @@ cp bootstrap.sh res7-bootstrap.sh
 ----
 
 
-== Register a Salt Minion via Bootstrap
+== Register a Salt Client via Bootstrap
 
 
-The following procedure will guide you through registering a Salt minion using the bootstrap script.
+The following procedure will guide you through registering a Salt client using the bootstrap script.
 
 .Procedure: Registration Using the Bootstrap Script
 . For your new minion download the bootstrap script from the {productname} server:
@@ -188,7 +188,7 @@ wget --no-check-certificate https://`server`/pub/bootstrap/res7-bootstrap.sh
 ----
 http://`server`/pub/
 ----
-. Make the [command]``res7-bootstrap.sh`` script executable and run it. This will install necessary Salt packages from the bootstrap repository and start the Salt minion service:
+. Make the [command]``res7-bootstrap.sh`` script executable and run it. This will install necessary Salt packages from the bootstrap repository and start the Salt client service:
 +
 
 ----
@@ -209,10 +209,10 @@ The RHEL installation media should be loop mounted and added as a child channel 
 See the warning in <<bp.expanded-support.resclients>> on access to RHEL Media.
 ====
 
-== Manual Salt Minion Registration
+== Manual Salt Client Registration
 
 
-The following procedure will guide you through the registration of a Salt minion manually.
+The following procedure will guide you through the registration of a Salt client manually.
 
 
 . Add the bootstrap repository:
@@ -227,7 +227,7 @@ yum-config-manager --add-repo https://`server`/pub/repositories/res/7/bootstrap
 ----
 yum install salt-minion
 ----
-. Edit the Salt minion configuration file to point to the {productname} server:
+. Edit the Salt client configuration file to point to the {productname} server:
 +
 
 ----
