--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -78,7 +78,7 @@ Instead, the {productname} server uses Taskomatic to ping only the minions that 
 You can adjust this by changing the [systemitem]``web.system_checkin_threshold`` parameter in [path]``rhn.conf``.
 The value is expressed in days, and the default value is [literal]``1``.
 
-Newly registered Salt minions will have the Salt mine disabled by default.
+Newly registered Salt clients will have the Salt mine disabled by default.
 If the Salt mine is running on your system, you can reduce load by disabling it.
 This is especially effective if you have a large number of minions.
 
