--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -2,14 +2,14 @@
 = SSH Integration
 
 
-This section provides an overview of the https://docs.saltstack.com/en/latest/topics/ssh/[Salt SSH] integration with SUSE Manager. This integration adds support for both ssh-push and ssh-push-tunnel connections for Salt minions.
+This section provides an overview of the https://docs.saltstack.com/en/latest/topics/ssh/[Salt SSH] integration with SUSE Manager. This integration adds support for both ssh-push and ssh-push-tunnel connections for Salt clients.
 
 
 
 [#ssh-push-overview]
 == SSH Push Overview
 
-Like the traditional stack, Salt minions may use an ssh connection to manage minions in place of https://docs.saltstack.com/en/latest/topics/transports/zeromq.html[Zeromq]. This additional functionality is based on Salt SSH. Salt SSH enables you to execute salt commands and states via ssh without ever needing to install a salt-minion.
+Like the traditional stack, Salt clients may use an ssh connection to manage minions in place of https://docs.saltstack.com/en/latest/topics/transports/zeromq.html[Zeromq]. This additional functionality is based on Salt SSH. Salt SSH enables you to execute salt commands and states via ssh without ever needing to install a salt-minion.
 
 When the server executes an action on a minion an ssh connection is made on demand. This connection differs from the always-connected mode used by minions managed via Zeromq.
 
