--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -58,7 +58,7 @@ Once a targeted monitored activity occurs an event is sent on the Salt event bus
 +
 
 .Enabling Beacons
-IMPORTANT: To work with beacons on Salt minions the package python-pyinotify must be installed for SUSE systems.
+IMPORTANT: To work with beacons on Salt clients the package python-pyinotify must be installed for SUSE systems.
 For RES systems install python-inotify.
 This package is not installed automatically during the salt minion package installation.
 +
