--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -20,7 +20,7 @@ After the server has been migrated to version 4, proxies can be automatically up
 ====
 
 Migrating {productname} Proxy 3.2 only works for proxies that have been registered as traditional clients.
-Proxies that are Salt minions cannot be migrated to the new version this way.
+Proxies that are Salt clients cannot be migrated to the new version this way.
 
 
 
