--- a/modules/administration/pages/live-patching-sles12.adoc
+++ b/modules/administration/pages/live-patching-sles12.adoc
@@ -8,8 +8,8 @@ For in depth information covering kGraft use, see https://www.suse.com/documenta
 Before you begin, ensure:
 
 * {productname} is fully updated
-* You have one or more Salt minions running {slsa}{nbsp}12 (SP1 or later)
-* Your {slsa}{nbsp}12 Salt minions are registered with {productname}
+* You have one or more Salt clients running {slsa}{nbsp}12 (SP1 or later)
+* Your {slsa}{nbsp}12 Salt clients are registered with {productname}
 * You have access to the {slsa}{nbsp}12 channels appropriate for your architecture, including the Live Patching child channel (or channels)
 * The minions are fully synchronized
 
