--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -3,11 +3,11 @@
 
 
 Support for {ubuntu} Clients was added in {susemgr} 3.2.
-Currently, Salt minions running {ubuntu} 16.04 LTS and 18.04 LTS are supported.
+Currently, Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS are supported.
 
 [NOTE]
 ====
-{ubuntu} clients must be Salt minions.
+{ubuntu} clients must be Salt clients.
 Traditional clients are not supported.
 ====
 
