--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -1,7 +1,7 @@
 [[registering.clients.webui]]
 = Registering Clients with the {webui}
 
-Registering clients with the {productname} {webui} works for Salt minions only.
+Registering clients with the {productname} {webui} works for Salt clients only.
 
 
 
@@ -31,7 +31,7 @@ This section describes using a bootstrap repository.
 Registering Salt clients with a bootstrap client is the same as registering traditional clients, which is described at xref:quickstart3_chap_suma_keys_and_first_client.adoc#registering.clients.traditional[Registering Traditional Clients]. When using this method, ensure you enable the [guimenu]``Bootstrap using Salt`` and activation key options in [guimenu]``Configuration File Deployment``, so that highstate is applied automatically.
 For information on using the {webui}, see xref:reference-webui-systems.adoc#ref.webui.systems.bootstrapping[Bootstrapping Salt].
 
-You can also use these methods to change existing traditional clients into Salt minions.
+You can also use these methods to change existing traditional clients into Salt clients.
 
 [IMPORTANT]
 .GPG Keys and Uyuni Client Tools
@@ -46,7 +46,7 @@ For more information, see xref:quickstart3_chap_suma_keys_and_first_client.adoc#
 You will also need to have fully synchronized a base channel for clients to obtain software packages (for example: `SLES12-SP4-Pool_for_x86_64`).
 
 
-.Procedure: Registering Salt Minions
+.Procedure: Registering Salt Clients
 . On your minion as {rootuser} enter the following command:
 +
 
@@ -89,7 +89,7 @@ to:
 ----
 master: FQDN.server.example.com
 ----
-. Restart the Salt minion with:
+. Restart the Salt client with:
 +
 
 ----
