--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -25,12 +25,12 @@ If you intend to use your installation with {smr} formulas, do not configure Cob
 
 == Install the build host and register it to {susemgr}
 
-Your build host should be a Salt minion, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
-For instructions to install Salt minions, see xref:client-configuration:manual-registration-overview.adoc[].
+Your build host should be a Salt client, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
+For instructions to install Salt clients, see xref:client-configuration:manual-registration-overview.adoc[].
 
 [WARNING]
 ====
-The build host must be a Salt minion.
+The build host must be a Salt client.
 Do not install the build host as a traditionally managed client.
 ====
 
@@ -81,7 +81,7 @@ For more information about system groups, see xref:reference:systems/system-grou
 [[retail.sect.install.branch]]
 == Install the branch server and register it to {susemgr}
 
-Your branch server should be a Salt minion, running {susemgrproxy} 4.0.
+Your branch server should be a Salt client, running {susemgrproxy} 4.0.
 With a limited feature set, {susemgrproxy} 3.2 is also possible.
 
 [WARNING]
