--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -57,7 +57,7 @@ retail_yaml --from-yaml retail.yml
 You can see statistical data while importing.  Then check the results in the {webui}. In menu:Main Menu[Systems > Systems > All], find empty profiles, and in menu:Main Menu[Systems > Groups], the groups for the hardware configuration, the branches, servers, and terminals.
 
 
-To finalize the branch server migration, you must install the branch server machines as Salt minions and bootstrap them as proxies.
+To finalize the branch server migration, you must install the branch server machines as Salt clients and bootstrap them as proxies.
 For more information about proxy installation, see xref:retail:retail-install.adoc[].
 For more information about using an activation key to assign the required channels, see xref:retail:retail-install-setup.adoc[].
 After onboarded to {susemgr}, the branch servers machines are connected with the empty profiles (by FQDN), and so they will get the Retail configuration.
