--- a/modules/salt/pages/salt-commands.adoc
+++ b/modules/salt/pages/salt-commands.adoc
@@ -19,7 +19,7 @@ Print a list of all minions that are down:
 salt-run manage.down
 ----
 +
-Print a list with the current status of all Salt minions:
+Print a list with the current status of all Salt clients:
 +
 
 ----
