--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -20,7 +20,7 @@ For generally supported {sle} upgrade paths, see  https://www.suse.com/documenta
 It is important that you migrate the client to the latest available SP first.
 Upgrade to SLE 12 SP4 after December 2018.
 
-.Auto-Upgrading Salt Minions Currently Not Supported
+.Auto-Upgrading Salt Clients Currently Not Supported
 [IMPORTANT]
 ====
 This procedure will work for traditionally  managed systems (system type [systemitem]``management``).
