Removed ref to missing image, removed old IDs, fixed bad xref.

--- a/modules/salt/pages/salt-formulas.adoc
+++ b/modules/salt/pages/salt-formulas.adoc
@@ -863,26 +863,10 @@ You can use the btn:[Apply Highstate] button from any formulas page of a group.
 Salt will ensure that only modified values are adjusted and restart or reinstall services only when necessary.
 
 
-This conclude your introduction to Salt Formulas.
-For additional information, see:
+For more information about Salt formulas, see https://docs.saltstack.com/en/latest/topics/development/conventions/formulas.html
 
-*  https://docs.saltstack.com/en/latest/topics/development/conventions/formulas.html
+For more information about using Salt formulas in a {smr} environment, see xref:retail:retail-formulas-intro.adoc[].
 
-// Antora Link
-ifndef::backend-pdf[]
-* xref::retail:retail-formulas.adoc[Retail Formulas]
-endif::[]
-
-// PDF Salt Guide
-ifdef::backend-pdf[]
-include::../../../modules/retail/pages/retail-formulas.adoc[leveloffset=2]
-endif::[]
-
-
-[[bp.saltforms.susemgr]]
-== Salt Formulas Coming with {susemgr}
-
-For general information, see the `Salt Formulas installation and usage instructions` at https://docs.saltstack.com/en/latest/topics/development/conventions/formulas.html.
 
 
 
