Updates per feedback.

--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -1,8 +1,9 @@
 [[retail.offline]]
 = Offline Use
 
-If the {susemgr} Server is offline, you can still perform a reboot on the terminals.
-If the connection between the branch server and the terminals is unstable or has low bandwidth, you can still perform an update on the terminals, using caching.
+If the {susemgr} Server is offline, you can still perform some operations on the terminals.
+This is useful if the connection between the branch server and the terminals is unstable or has low bandwidth.
+This feature uses caching to perform updates.
 
 [IMPORTANT]
 ====
@@ -25,9 +26,6 @@ The parameter is measured in seconds, and defaults to [systemitem]``60``.
 ----
 SALT_TIMEOUT = 60
 ----
-
-When you set this parameter, it will come into effect only when packages are synchronized.
-You might like to delete the cached data to remove older data.
 
 For more about kernel parameters, see xref:retail:retail-formula-pxe.adoc[].
 
