keep minion where it is visible in the UI

--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -117,7 +117,7 @@ Otherwise it can be left empty.
 CA Password::
 Enter the password that was used for the certificate of your {productname} server.
 
-Do You Want to Use an Existing SSH Key for Proxying SSH-Push Salt Clients?::
+Do You Want to Use an Existing SSH Key for Proxying SSH-Push Salt Minion?::
 Use this option if you want to reuse a SSH key that was used for SSH-Push Salt clients on the server.
 
 Create and Populate Configuration Channel rhn_proxy_config_1000010001?::
