salt clients now, no longer minions (#596)
* salt clients now, no longer minions
* keep minion where it is visible in the UI

--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -322,7 +322,7 @@ Then [command]``service osad stop``.
 The bootstrap should now run with a new system ID, rather than a duplicate.
 
 
-If you are onboarding Salt minion clones, then you will also need to check if they have the same Salt minion ID.
+If you are onboarding Salt client clones, then you will also need to check if they have the same Salt minion ID.
 You will need to delete the minion ID on each cloned minion, using the [command]``rm`` command.
 Each operating system type stores this file in a slightly different location, check the table for the appropriate command.
 
