--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -45,7 +45,7 @@ The instance must only be able to be accessed by machines in your specified IP r
 A world-accessible {productname} instance violates the terms of the {productname} EULA, and it will not be supported by {suse}.
 ====
 
-To be able accessing the {productname} {webui} allow HTTPS, when you are setting up your networking environment.
+To access the {productname} {webui}, allow HTTPS when you set up your networking environment.
 
 
 
