--- a/modules/administration/pages/iss.adoc
+++ b/modules/administration/pages/iss.adoc
@@ -14,17 +14,17 @@ If conflicting configurations exist, the system will prioritize the master confi
 
 * In the [guimenu]``Master Fully-Qualified Domain Name`` field, enter the FQDN of the ISS master (for example: [systemitem]``http://server1.example.com``).
 * In the [guimenu]``Filename of this Master's CA Certificate`` field, enter the absolute  path to the CA certificate on the ISS master (for example: [systemitem]``/etc/pki/trust/anchors-org-ssl``).
-. Click btn:[Add new master] to add the ISS master.
+. To add the ISS master, click btn:[Add new master].
 
 .Procedure: Setting up an ISS Slave
 
 . In the {productname} {webui}, navigate to menu:Admin[ISS Configuration > Master Setup], and click btn:[Add new slave].
-. In the [guimenu]``Edit Slave Details`` dialog, provide these details for the server to use as the ISS slave:
+. In the [guimenu]``Edit Slave Details`` dialog, for the server to use as the ISS slave provide these details:
 
 * In the [guimenu]``Slave Fully-Qualified Domain Name`` field, enter the FQDN of the ISS slave (for example: [systemitem]``http://server2.example.com``).
-* Check the [guimenu]``Allow Slave to Sync?`` checkbox to enable the slave to synchronize with the master.
-* Check the [guimenu]``Sync All Orgs to Slave?`` checkbox to synchronize all organizations to this slave.
-. Click btn:[Create] to add the ISS slave.
+* To enable the slave to synchronize with the master, check [guimenu]``Allow Slave to Sync?``.
+* To synchronize all organizations to this slave, check the [guimenu]``Sync All Orgs to Slave?`` checkbox.
+. To add the ISS slave, click btn:[Create].
 . In the [guimenu]``Allow Export of the Selected Organizations`` section, check the organizations you want to allow this slave to export to the master, and click btn:[Allow Orgs].
 
 When you have the master and slaves set up, you can perform a synchronization from the command line on the master, with this command:
